--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,15 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
