--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
