--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,10 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "inversify": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "reflect-metadata": "^0.2.2"
   },
   "name": "backend",
   "version": "1.0.0",
