--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,34 +1,70 @@
 {
-  "type": "module",
+
   "dependencies": {
+
     "bcrypt": "^5.1.1",
+
     "cors": "^2.8.5",
+
     "dotenv": "^16.5.0",
+
     "express": "^5.1.0",
+
     "inversify": "^7.5.1",
+
     "jsonwebtoken": "^9.0.2",
+
     "mongodb": "^6.16.0",
+
     "mongoose": "^8.13.2",
+
     "nodemailer": "^6.10.1",
+
     "reflect-metadata": "^0.2.2"
+
   },
+
   "name": "backend",
+
   "version": "1.0.0",
+
   "main": "index.js",
+
   "devDependencies": {
+
+    "@types/bcrypt": "^5.0.2",
+
+    "@types/cors": "^2.8.17",
+
     "@types/express": "^5.0.1",
+
+    "@types/jsonwebtoken": "^9.0.9",
+
     "@types/nodemailer": "^6.4.17",
+
     "nodemon": "^3.1.10",
+
     "ts-node": "^10.9.2",
+
     "typescript": "^5.8.3"
+
   },
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.ts",
-    "dev": "nodemon server.ts"
+
+    "dev": "nodemon --exec ts-node server.ts",
+
+    "start": "node dist/server.ts"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "description": ""
+
 }
+
