--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,15 +1,14 @@
 {
-    "compilerOptions": {
-    //"allowImportingTsExtensions":true,
-      "target": "ES6",               // Modern JS features
-      "module": "commonjs",          // Node.js-compatible modules
-      "experimentalDecorators": true, // Required for @injectable/@inject
-      "emitDecoratorMetadata": true,  // Required for dependency injection
-      "strict": true,                // Better type safety
-      "esModuleInterop": true,       // Easier module imports
-      "skipLibCheck": true,          // Faster compilation
-      "outDir": "./dist"             // Output folder for compiled JS
-    },
-    "include": ["src/**/*"],         // Files to compile
-    "exclude": ["node_modules"]      // Ignore these
-  }
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "CommonJS", // Must be "CommonJS" (not "ESNext")
+    "moduleResolution": "node", // Explicitly set to "node"
+    "experimentalDecorators": true, // Required for @injectable
+    "emitDecoratorMetadata": true,  // Required for DI
+    "esModuleInterop": true,       // Helps with default imports
+    "strict": true,
+    "outDir": "./dist"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
+}
